[gd_scene load_steps=4 format=3 uid="uid://bk610ucxrolmb"]

[ext_resource type="Script" path="res://bulle.gd" id="1_sw4qy"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_ptkek"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_jfcu3"]

[node name="Bulle" type="CharacterBody2D" groups=["Bulle"]]
script = ExtResource("1_sw4qy")

[node name="Bulle Sprite" type="AnimatedSprite2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_ptkek")

[node name="CoyoteTimer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="Homing_cooldown" type="Timer" parent="."]
one_shot = true

[node name="Void_Checker" type="Area2D" parent="."]
collision_layer = 16
collision_mask = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="Void_Checker"]
scale = Vector2(0.8, 0.8)
shape = SubResource("RectangleShape2D_jfcu3")

[connection signal="timeout" from="Homing_cooldown" to="." method="_on_homing_cooldown_timeout"]
[connection signal="area_entered" from="Void_Checker" to="." method="_on_void_checker_area_entered"]
